--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@wordpress/api-fetch": "^6.7.0",
     "@wordpress/base-styles": "^4.5.0",
     "classnames": "^2.3.1",
+    "lodash": "^4.17.21",
     "sass": "^1.52.3",
     "svelte": "^3.48.0",
     "svelte-preprocess": "^4.10.7",
