--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "svelte": "^3.48.0",
     "svelte-preprocess": "^4.10.7",
     "svelte-spa-router": "^3.2.0",
+    "svelte-writable-derived": "^2.1.3",
     "vite": "^2.9.9"
   }
 }
