--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "lodash": "^4.17.21",
     "sass": "^1.52.3",
     "svelte": "^3.48.0",
+    "svelte-modals": "^1.1.0",
+    "svelte-portal": "^2.2.0",
     "svelte-preprocess": "^4.10.7",
     "svelte-spa-router": "^3.2.0",
     "svelte-writable-derived": "^2.1.3",
