--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.44",
     "@wordpress/api-fetch": "^6.7.0",
     "@wordpress/base-styles": "^4.5.0",
+    "autoprefixer": "^10.4.7",
     "classnames": "^2.3.1",
     "lodash": "^4.17.21",
+    "postcss": "^8.4.14",
     "sass": "^1.52.3",
     "svelte": "^3.48.0",
     "svelte-modals": "^1.1.0",
@@ -23,6 +25,7 @@
     "svelte-preprocess": "^4.10.7",
     "svelte-spa-router": "^3.2.0",
     "svelte-writable-derived": "^2.1.3",
+    "tailwindcss": "^3.1.3",
     "vite": "^2.9.9"
   }
 }
